--- a/admincar/templates/admincar/components/sidebar.html
+++ b/admincar/templates/admincar/components/sidebar.html
@@ -32,6 +32,16 @@
             <span class="font-medium">อนุมัติรายการแจ้งโอน</span>
         </a>
 
+        <a href="{% url 'admin_refund_dashboard' %}" 
+           class="flex items-center px-4 py-3 rounded-lg transition-all duration-200 group 
+           {% if request.resolver_match.url_name == 'admin_refund_dashboard' %}
+               bg-[#117a8b] shadow-inner 
+           {% else %}
+               hover:bg-[#138496] hover:translate-x-1
+           {% endif %}">
+            <span class="font-medium">จัดการคืนเงิน</span>
+        </a>
+
         <a href="{% url 'approve_cars_list' %}" 
         class="flex items-center px-4 py-3 rounded-lg transition-all duration-200 group 
            {% if request.resolver_match.url_name == 'approve_cars_list' %}
